--- a/about.html
+++ b/about.html
@@ -11,15 +11,15 @@
 <body>
     
     
-<br>We bring to you free materials for your studies, excelling at your studies.</br>
+<br>We bring to you free materials for your examinations, succeeding at your investigations.</br>
 
-<br>We’re committed to finding and building a more splendid, all the more clear, and brilliant future for yourself.</br>
-
-
+<br> We're focused on finding and building a more stunning, even more clear, and splendid future for yourself.</br>
 
 
-<li>We’re not a recruiting organization nor a life long office</li>
-<li>We-re committed to assisting you with accomplishing ypur dream Result</li>
+
+
+<li> We're not an enlisting association nor a deep rooted office</li>
+<li>We-committed once again to helping you with achieving ypur dream Result</li>
 
 
 
@@ -27,15 +27,15 @@
 
 
 <h3>WHAT YOU NEED TO KNOW</h3>
-<br>We mean to bring you most recent materials and LECTURE NOTES to handling your fantasy position.</br>
-<br>We bring to you different ways by which you can begin making that perfect CPGA youve always dreamt of.</br>
-<br>We call your attention to different ways by which you can begin procure your heart desire.</br>
+<br>We mean to bring you latest materials and LECTURE NOTES to taking care of your dream position.</br>
+<br>We bring to you various ways by which you can start making that ideal CPGA youve consistently longed for.</br>
+<br>We point out your various ways by which you can start obtain your heart want.</br>
 
 
 <h2>OUR LOCATION</h2>
-<br>We are located at Bosso Local Governtment Area, Minna Niger State.</br>
+<br>We are situated at Garven Local Governtment Area, Minna Niger State.</br>
 <h2>OUR MISSION</h2>
-<br>Upon our arrival,wemet the challenges students faced with access to materials. we pondered on ideas brought forth to the table and we decided to create an online storage for all your preffered study materials</br>
+<br>Upon our arrival,we met the difficulties understudies confronted with admittance to materials. we considered on thoughts offered forward that would be useful and we chose to make an internet based capacity for all your preferred concentrate on materials</br>
 
 </div>
 </body>
