--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<footer>
 		<div class="footer1">
 			<br><a href="about.html">ABOUT US</a></br>
-			<br><a href="privacy.html">PRIVACY POLICY</a></br>
+			<br><a href="https://automattic.com/privacy/">PRIVACY POLICY</a></br>
 			<br><a href="contactus.html">CONTACT US</a></br>
 		</div>
 	</footer>
